# jackybot

./: .dockerignore  .gitignore  .running_pids  Dockerfile  README.md  SERVER_SETUP.md  WAVELINK_SETUP.md  application.example.yml  bot.py  command_stats.json.bak  cookie_generator.py  deploy.sh  docker-compose.yml  env.example  error_stats.json  index.html  invites.json  jackybot_start.bat.lnk  jackybot_system_prompt.md  lavalink.service  lavalink_setup.bat  lavalink_setup.sh  leveling_data - Copy.json.bak  leveling_data.json  links.csv  links.csv.bak  message.txt  pyproject.toml  requirements-uv.txt  requirements.txt  server_manager_memory.txt  setup_youtube_auth.py  start.bat  start_all.sh  start_bot.sh  start_lavalink.sh  start_linux.sh  stop_all.sh  update_status.json  user_messages.json
Deprecated Cogs/: 3d.py  balloon.py  button.py  diet.py  google.py  help.py  hot.py  image_generation.py  image_processing.py  image_processingCOPY.py  image_to_video.py  inpainting.py  karma.py  peak_updates.py  playlists.py  record.py  resource_management.py  server_manager.py  serverlist.py  snake.py  stats.py  twitch_notifier.py  video.py  voice.py  web_interface.py
JackyBotRust/: Cargo.toml
JackyBotRust/src/: main.rs
MemeTemplates/: memetemplate.pdn
assets/: cookies.txt
cogs/: 8mb_video.py  ai_audio.py  ai_image.py  ark_raiders_updates.py  aura.py  cog_metadata.json  context_manager.py  freegames.py  groq_chat.py  gyat.py  help.py  highlights.py  homelander.py  image2gif.py  image_gen.py  img2img.py  lovescore.py  model_manager.py  movies.py  music.py  music_wavelink.py  playlists.py  poll.py  punisher.py  quote.py  randomnumber.py  record.py  role_management.py  serverlist.py  stats.py  steamos_updates.py  suggestions.py  timezone.py  triggered.py  trivia.py  voice_chat.py.disabled  web_interface_listener.py  zen_updates.py
conversations/: 103873926622363648_conversation.txt  690594254455570512_conversation.txt
data/: aura_data.json  cog_settings.json  command_stats.json  error_stats.json  highlights_data.json  jackychat_channels.json  movie_suggestions.json  movie_watchlist.json  playlists.json  server_command_stats.json  server_manager_memory.json  user_stats.json
docker/: Dockerfile  docker-compose.yml
handler/: chatgpt_selenium_automation.py
jackybot_web/: FFMPEG_INSTALL.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  VPS_SETUP.md  check_status.sh  env_example.txt  fix_500_error.sh  fix_nginx_ffmpeg.sh  fix_permissions.sh  setup.sh  setup_jackybot_xyz.sh  setup_vps.sh  start_backend.bat  start_backend.sh  start_frontend.bat  (+1 more)
(+49 files in other folders)
