[project]
name = "jackybot"
version = "0.1.0"
description = "JackyBot Discord bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "discord.py[voice]>=2.4,<2.6",
  "PyNaCl>=1.5",
  "aiohttp>=3.9",
  "aiofiles>=23",
  "groq>=0.13",
  "gTTS>=2.5",
  "yt-dlp>=2024.3",
  "pillow>=10.0",
  "imageio>=2.31",
  "imageio-ffmpeg>=0.5",
  "ffmpeg-python>=0.2",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pytz>=2023.3",
  "playwright>=1.48",
  "packaging>=24.0",
  "torch>=2.0",
  "diffusers>=0.31",
  "transformers>=4.45",
  "safetensors>=0.4",
  "huggingface-hub>=0.23",
  "accelerate>=0.33",
  "SpeechRecognition>=3.10",
  "PyAudio>=0.2.14",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


