[package]
name = "jackybot-rust"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice", "framework", "standard_framework"] }
songbird = { version = "0.4", features = ["builtin-queue", "driver"] }
lavalink-rs = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
once_cell = "1.19"
parking_lot = "0.12"
smallvec = "1.13"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
